<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>scala-contacts</artifactId>
	<name>scala-contacts</name>
	<description>Springboot Scala Contacts App</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.3</version>
	</parent>

	<contributors>
		<contributor>
			<name>T.N.Silverman</name>
			<email>tnsilver@gmail.com</email>
			<roles>
				<role>author</role>
				<role>instructor</role>
			</roles>
		</contributor>
	</contributors>

	<properties>
		<spring.profiles.active>dev</spring.profiles.active>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<scala.version>2.13.6</scala.version>
		<java.version>16</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.version>3.8.1</maven.compiler.version>
		<commons-io.version>2.9.0</commons-io.version>
		<org.apache.poi.version>5.0.0</org.apache.poi.version>
		<jaxb-core.version>2.3.0.1</jaxb-core.version>
		<jaxb-impl.version>2.3.2</jaxb-impl.version>
		<activation.version>1.1.1</activation.version>
		<itextpdf.version>5.5.13.2</itextpdf.version>
		<org.apache.poi.version>5.0.0</org.apache.poi.version>
		<javaee.version>8.0</javaee.version>
		<javax.servlet.jsp-api.version>2.3.3</javax.servlet.jsp-api.version>
		<hibernate.validator.version>7.0.1.Final</hibernate.validator.version>
		<maven.test.failure.ignore>true</maven.test.failure.ignore>
		<maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
		<maven.site.plugin.version>3.9.1</maven.site.plugin.version>
		<maven.pmd.plugin.version>3.11.0</maven.pmd.plugin.version>
		<maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
		<maven.failsafe.plugin.version>3.0.0-M5</maven.failsafe.plugin.version>
		<jacoco.maven.plugin.version>0.8.7</jacoco.maven.plugin.version>
		<scala.maven.plugin.version>4.5.3</scala.maven.plugin.version>
		<jacoco.haltOnFailure>false</jacoco.haltOnFailure>
		<spring.profiles.active>dev</spring.profiles.active>
		<spring.datasource.url>jdbc:mysql://localhost:3306/contacts?useLegacyDatetimeCode=false&amp;serverTimezone=UTC&amp;reconnect=true&amp;useSSL=false&amp;allowPublicKeyRetrieval=true</spring.datasource.url>
		<spring.datasource.hikari.driver-class-name>com.mysql.cj.jdbc.Driver
		</spring.datasource.hikari.driver-class-name>
		<spring.datasource.hikari.username>user</spring.datasource.hikari.username>
		<spring.datasource.hikari.password>password</spring.datasource.hikari.password>
		<spring.jpa.properties.hibernate.dialect>org.hibernate.dialect.MySQL8Dialect</spring.jpa.properties.hibernate.dialect>
		<application.it.test.timeout>10</application.it.test.timeout>
		<application.it.test.timeunit>MINUTES</application.it.test.timeunit>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>

		<!--<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-hateoas</artifactId>
		</dependency>-->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-jasper</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>javax.servlet.jsp-api</artifactId>
			<version>${javax.servlet.jsp-api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>${itextpdf.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${org.apache.poi.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>javax.persistence-api</artifactId>
		</dependency>

		<!-- scala -->

		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala.version}</version>
		</dependency>

		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-reflect</artifactId>
			<version>${scala.version}</version>
		</dependency>

		<!-- test -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<sourceDirectory>src/main/scala</sourceDirectory>
		<testSourceDirectory>src/test/scala</testSourceDirectory>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>static/images/**/*.*</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>static/images/**/*.*</include>
				</includes>
			</resource>
			<resource>
				<directory>src/test/resources</directory>
				<targetPath>${project.build.directory}/test-classes</targetPath>
				<filtering>true</filtering>
				<includes>
					<include>**/*.properties</include>
				</includes>
			</resource>
		</resources>

		<pluginManagement>
			<plugins>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven.jar.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${maven.failsafe.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>${maven.pmd.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.maven.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>net.alchim31.maven</groupId>
					<artifactId>scala-maven-plugin</artifactId>
					<version>${scala.maven.plugin.version}</version>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
							<excludes>
								<exclude>**/Test</exclude>
								<exclude>**/Application*</exclude>
								<exclude>**/*Config</exclude>
								<exclude>**/Base*</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>repackage</id>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
					<excludes>
						<exclude>**/Application*</exclude>
						<exclude>**/*Config</exclude>
						<exclude>**/*IT</exclude>
						<exclude>**/Base*</exclude>
					</excludes>
					<argLine>@{argLine} --add-opens
						java.base/java.time=ALL-UNNAMED
						-Duser.timezone=UTC</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<configuration>
					<showSuccess>true</showSuccess>
				</configuration>
				<executions>
					<execution>
						<id>generate-reports</id>
						<phase>test</phase>
						<goals>
							<goal>report-only</goal>
						</goals>
					</execution>
					<execution>
						<id>generate-it-reports</id>
						<phase>integration-test</phase>
						<goals>
							<goal>failsafe-report-only</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven.site.plugin.version}</version>
				<executions>
					<execution>
						<id>generate-test-reports-styles</id>
						<phase>test</phase>
						<goals>
							<goal>site</goal>
						</goals>
						<configuration>
							<generateReports>false</generateReports>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>coverage-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/*Test.*</exclude>
								<exclude>**/*Config.*</exclude>
								<exclude>**/*IT.*</exclude>
								<exclude>**/Application*.*</exclude>
								<exclude>**/Base*</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>jacoco-check</id>
						<phase>test</phase>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/*Test.*</exclude>
								<exclude>**/*IT.*</exclude>
								<exclude>**/*Config.*</exclude>
								<exclude>**/Application*.*</exclude>
								<exclude>**/Base*</exclude>
							</excludes>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>INSTRUCTION</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.60</minimum>
										</limit>
										<limit>
											<counter>CLASS</counter>
											<value>MISSEDCOUNT</value>
											<maximum>0</maximum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<scalaVersion>${scala.version}</scalaVersion>
					<failOnError>false</failOnError>
					<displayCmd>true</displayCmd>
					<!-- Mixed, JavaThenScala, or ScalaThenJava -->
					<compileOrder>JavaThenScala</compileOrder>
					<args>-deprecation</args>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<profiles>

		<profile>
			<!-- live mongo on port 27017 -->
			<id>prod</id>
			<properties>
				<spring.profiles.active>prod</spring.profiles.active>
				<spring.flyway.locations>classpath:db/migration/mysql</spring.flyway.locations>
				<spring.jpa.show-sql>false</spring.jpa.show-sql>
			</properties>
		</profile>

		<profile>
			<!-- embedded mongo -->
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<spring.profiles.active>dev</spring.profiles.active>
				<spring.datasource.url>jdbc:h2:file:${project.build.directory}/h2/contacts</spring.datasource.url>
				<spring.datasource.hikari.driver-class-name>org.h2.Driver</spring.datasource.hikari.driver-class-name>
				<spring.datasource.hikari.username>sa</spring.datasource.hikari.username>
				<spring.datasource.hikari.password>password</spring.datasource.hikari.password>
				<spring.jpa.properties.hibernate.dialect>org.hibernate.dialect.H2Dialect
				</spring.jpa.properties.hibernate.dialect>
				<spring.flyway.locations>classpath:db/migration/h2</spring.flyway.locations>
				<spring.jpa.show-sql>false</spring.jpa.show-sql>
				<application.it.test.timeout>10</application.it.test.timeout>
				<application.it.test.timeunit>MINUTES</application.it.test.timeunit>
			</properties>
		</profile>

		<profile>
			<!-- embedded mongo -->
			<id>test</id>
			<properties>
				<spring.profiles.active>test</spring.profiles.active>
				<!-- <spring.datasource.url>jdbc:h2:mem:contacts</spring.datasource.url> -->
				<spring.datasource.url>jdbc:h2:file:${project.build.directory}/h2/contacts</spring.datasource.url>
				<spring.datasource.hikari.driver-class-name>org.h2.Driver</spring.datasource.hikari.driver-class-name>
				<spring.datasource.hikari.username>sa</spring.datasource.hikari.username>
				<spring.datasource.hikari.password>password</spring.datasource.hikari.password>
				<spring.jpa.properties.hibernate.dialect>org.hibernate.dialect.H2Dialect
				</spring.jpa.properties.hibernate.dialect>
				<spring.flyway.locations>classpath:db/migration/h2</spring.flyway.locations>
				<spring.jpa.show-sql>false</spring.jpa.show-sql>
				<application.it.test.timeout>5</application.it.test.timeout>
				<application.it.test.timeunit>MINUTES</application.it.test.timeunit>
			</properties>
		</profile>

	</profiles>

</project>
